<resources>
    <string name="app_name">ShoppingList</string>
    <string name="inter_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop list</string>
    <string name="new_item">New</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="new_list_name">New list name</string>
    <string name="list_name">List name</string>
    <string name="create_list">Create list</string>

    <string name="delete_Item">Do you want delete this  Item?</string>
    <string name="delete_alert">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="update_list_name">Update list name</string>
    <string name="delete_list_item">Delete list</string>
    <string name="clear_list_item">Clear list</string>
    <string name="share_list_item">Share list</string>
    <string name="new_shop_item">New shop item</string>
    <string name="new_item_action">New item</string>
    <string name="save_item">Save item</string>
    <string name="empty_list">Empty list</string>
    <string name="update_list_item">Update List Item</string>

    <string name="general">General</string>
    <string name="chose_note_style">Chose note style</string>
    <string name="chose_time_format">Chose time format</string>

    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>

    <string name="theme_settings">Theme settings</string>
    <string name="chose_theme">Chose theme</string>

    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>


</resources>