<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_list"
        android:title="@string/delete_list_item"
        />
    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_list_item"
        />
    <item
        android:id="@+id/share_list"
        android:title="@string/share_list_item"
        />

    <item
        android:id="@+id/new_shop_item"
        android:title="@string/new_shop_item"
        android:icon="@drawable/ic_new_shop_item"
        app:actionLayout="@layout/edit_action_layout"
        android:orderInCategory="1"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/save_item"
        android:title="@string/save_item"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        app:showAsAction="always"/>

</menu>